Fixed placeholder and vertical align in Subscribe modal

--- a/src/scss/modals/_subscribe.scss
+++ b/src/scss/modals/_subscribe.scss
@@ -14,6 +14,12 @@
     top: 61px;
   }
 
+  &__wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
   &__heading {
     @extend %heading-reset;
     font-size: 50px;
@@ -21,7 +27,7 @@
     color: $white;
     text-transform: uppercase;
     text-align: center;
-    padding: 153px 171px 51px 171px;
+    padding: 0 171px 51px 171px;
     text-shadow: 0 0 8px rgba(0, 0, 0, 0.23);
   }
 
